--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Version -1.0.0
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Version -1.0.0</title>
+    </head>
+    <body>
+        <h1>Version -1.0.0</h1>
+    </body>
+</html>
